Aplicando o Migrations no projeto

--- a/LanchesMac/appsettings.json
+++ b/LanchesMac/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-5VA26Q2\\sqlexpress;Initial Catalog=LanchesDatabase;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
