--- a/LanchesMac/appsettings.json
+++ b/LanchesMac/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-5VA26Q2\\sqlexpress;Initial Catalog=LanchesDatabase;Integrated Security=True"
+    "DefaultConnection": "Data Source=127.0.0.1\\sqlexpress;Initial Catalog=LanchesDatabase;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
