90. Implementando a paginação para Lanches

--- a/LanchesMac/appsettings.json
+++ b/LanchesMac/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=127.0.0.1\\sqlexpress;Initial Catalog=LanchesDatabase;Integrated Security=True"
+    "DefaultConnection": "Data Source=FELIPE-NOTEBOOK;Initial Catalog=LanchesDatabase;Integrated Security=True"
+
   },
   "Logging": {
     "LogLevel": {
