--- a/LanchesMac/appsettings.json
+++ b/LanchesMac/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=FELIPE-NOTEBOOK;Initial Catalog=LanchesDatabase;Integrated Security=True"
-
+    "DefaultConnection": "Data Source=127.0.0.1;Initial Catalog=LanchesDatabase;Integrated Security=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
