--- a/LanchesMac/appsettings.json
+++ b/LanchesMac/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConfigurationPastaImagens": {
+    "NomePastaImaensProdutos" : "images/produtos"
+  }, 
+  
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=127.0.0.1;Initial Catalog=LanchesDatabase;Integrated Security=True;Encrypt=False"
   },
