99. Gerando gráficos usando a biblioteca GoogleChart - Criando o modelo de dominio

--- a/LanchesMac/appsettings.json
+++ b/LanchesMac/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConfigurationPastaImagens": {
-    "NomePastaImaensProdutos" : "images/produtos"
+    "NomePastaImagensProdutos" : "images/produtos"
   }, 
   
   "ConnectionStrings": {
